--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Sandbox</title>
         <meta charset="UTF-8">
     </head>
-    <header>TOP project TicTacToe. Start by typing game() in dev tools' console</header>
+    <header>TOP project RockPaperScissors. Start by typing game() in dev tools' console</header>
 
     <body>
         <script>
